--- a/Roberta.ipynb
+++ b/Roberta.ipynb
@@ -2,135 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import pandas as pd\n",
-    "import numpy as np\n",
-    "import torch\n",
-    "from torch.utils.data import DataLoader, TensorDataset, RandomSampler, SequentialSampler\n",
-    "from transformers import RobertaTokenizer, RobertaForSequenceClassification, AdamW, get_linear_schedule_with_warmup\n",
-    "from sklearn.model_selection import train_test_split\n",
-    "from sklearn.metrics import accuracy_score, precision_score, recall_score, f1_score\n",
-    "import time\n",
-    "\n",
-    "# Load the dataset\n",
-    "df = pd.read_csv('final_dataset.csv')\n",
-    "\n",
-    "# Map target to 0 and 1 if necessary\n",
-    "df['target'] = df['target'].map({'fake': 0, 'genuine': 1})\n",
-    "\n",
-    "# Split the dataset\n",
-    "train_texts, val_texts, train_labels, val_labels = train_test_split(df['text'], df['target'], test_size=0.2, random_state=42)\n",
-    "\n",
-    "# Load RoBERTa tokenizer\n",
-    "tokenizer = RobertaTokenizer.from_pretrained('roberta-base')\n",
-    "\n",
-    "# Tokenize the texts\n",
-    "train_encodings = tokenizer(list(train_texts), truncation=True, padding=True, max_length=128)\n",
-    "val_encodings = tokenizer(list(val_texts), truncation=True, padding=True, max_length=128)\n",
-    "\n",
-    "# Convert to tensors\n",
-    "train_inputs = torch.tensor(train_encodings['input_ids'])\n",
-    "train_masks = torch.tensor(train_encodings['attention_mask'])\n",
-    "train_labels = torch.tensor(train_labels.values)\n",
-    "\n",
-    "val_inputs = torch.tensor(val_encodings['input_ids'])\n",
-    "val_masks = torch.tensor(val_encodings['attention_mask'])\n",
-    "val_labels = torch.tensor(val_labels.values)\n",
-    "\n",
-    "# Create DataLoader\n",
-    "batch_size = 16  # Increase batch size if possible\n",
-    "train_data = TensorDataset(train_inputs, train_masks, train_labels)\n",
-    "train_sampler = RandomSampler(train_data)\n",
-    "train_dataloader = DataLoader(train_data, sampler=train_sampler, batch_size=batch_size, num_workers=4)\n",
-    "\n",
-    "val_data = TensorDataset(val_inputs, val_masks, val_labels)\n",
-    "val_sampler = SequentialSampler(val_data)\n",
-    "val_dataloader = DataLoader(val_data, sampler=val_sampler, batch_size=batch_size, num_workers=4)\n",
-    "\n",
-    "# Load pre-trained RoBERTa model\n",
-    "model = RobertaForSequenceClassification.from_pretrained('roberta-base', num_labels=2)\n",
-    "\n",
-    "# Move model to GPU if available\n",
-    "device = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")\n",
-    "model.to(device)\n",
-    "\n",
-    "# Set up optimizer and learning rate scheduler\n",
-    "optimizer = AdamW(model.parameters(), lr=2e-5, eps=1e-8)\n",
-    "total_steps = len(train_dataloader) * 3  # 3 epochs\n",
-    "scheduler = get_linear_schedule_with_warmup(optimizer, num_warmup_steps=0, num_training_steps=total_steps)\n",
-    "\n",
-    "# Mixed precision training\n",
-    "scaler = torch.cuda.amp.GradScaler()\n",
-    "\n",
-    "# Training function\n",
-    "def train(epoch, model, train_dataloader, optimizer, scheduler, scaler):\n",
-    "    model.train()\n",
-    "    total_loss = 0\n",
-    "    for step, batch in enumerate(train_dataloader):\n",
-    "        b_input_ids, b_input_mask, b_labels = [x.to(device) for x in batch]\n",
-    "\n",
-    "        model.zero_grad()\n",
-    "        \n",
-    "        with torch.cuda.amp.autocast():\n",
-    "            outputs = model(b_input_ids, attention_mask=b_input_mask, labels=b_labels)\n",
-    "            loss = outputs.loss\n",
-    "\n",
-    "        total_loss += loss.item()\n",
-    "        \n",
-    "        scaler.scale(loss).backward()\n",
-    "        scaler.step(optimizer)\n",
-    "        scaler.update()\n",
-    "        scheduler.step()\n",
-    "\n",
-    "    avg_loss = total_loss / len(train_dataloader)\n",
-    "    print(f'Epoch {epoch+1}, Loss: {avg_loss:.3f}')\n",
-    "\n",
-    "# Validation function\n",
-    "def evaluate(model, val_dataloader):\n",
-    "    model.eval()\n",
-    "    predictions, true_labels = [], []\n",
-    "    for batch in val_dataloader:\n",
-    "        b_input_ids, b_input_mask, b_labels = [x.to(device) for x in batch]\n",
-    "\n",
-    "        with torch.no_grad():\n",
-    "            outputs = model(b_input_ids, attention_mask=b_input_mask)\n",
-    "        \n",
-    "        logits = outputs.logits\n",
-    "        predictions.append(logits.argmax(dim=-1).cpu().numpy())\n",
-    "        true_labels.append(b_labels.cpu().numpy())\n",
-    "\n",
-    "    predictions = np.concatenate(predictions)\n",
-    "    true_labels = np.concatenate(true_labels)\n",
-    "    return predictions, true_labels\n",
-    "\n",
-    "# Train the model\n",
-    "start_time = time.time()\n",
-    "for epoch in range(3):\n",
-    "    train(epoch, model, train_dataloader, optimizer, scheduler, scaler)\n",
-    "end_time = time.time()\n",
-    "print(f\"Training time: {(end_time - start_time) / 60:.2f} minutes\")\n",
-    "\n",
-    "# Evaluate the model\n",
-    "predictions, true_labels = evaluate(model, val_dataloader)\n",
-    "\n",
-    "# Calculate performance metrics\n",
-    "accuracy = accuracy_score(true_labels, predictions)\n",
-    "precision = precision_score(true_labels, predictions)\n",
-    "recall = recall_score(true_labels, predictions)\n",
-    "f1 = f1_score(true_labels, predictions)\n",
-    "\n",
-    "print(f'Accuracy: {accuracy:.2f}')\n",
-    "print(f'Precision: {precision:.2f}')\n",
-    "print(f'Recall: {recall:.2f}')\n",
-    "print(f'F1 Score: {f1:.2f}')\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -146,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -162,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -185,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -203,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -263,7 +135,7 @@
        ")"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -279,7 +151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -305,7 +177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -353,41 +225,53 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
-     "ename": "KeyboardInterrupt",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[13], line 8\u001b[0m\n\u001b[0;32m      6\u001b[0m outputs \u001b[38;5;241m=\u001b[39m model(b_input_ids, attention_mask\u001b[38;5;241m=\u001b[39mb_input_mask, labels\u001b[38;5;241m=\u001b[39mb_labels)\n\u001b[0;32m      7\u001b[0m loss \u001b[38;5;241m=\u001b[39m outputs\u001b[38;5;241m.\u001b[39mloss\n\u001b[1;32m----> 8\u001b[0m \u001b[43mloss\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mbackward\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m      9\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m (step \u001b[38;5;241m+\u001b[39m \u001b[38;5;241m1\u001b[39m) \u001b[38;5;241m%\u001b[39m accumulation_steps \u001b[38;5;241m==\u001b[39m \u001b[38;5;241m0\u001b[39m:\n\u001b[0;32m     10\u001b[0m     optimizer\u001b[38;5;241m.\u001b[39mstep()\n",
-      "File \u001b[1;32mc:\\Users\\pc\\AppData\\Local\\Programs\\Python\\Python312\\Lib\\site-packages\\torch\\_tensor.py:525\u001b[0m, in \u001b[0;36mTensor.backward\u001b[1;34m(self, gradient, retain_graph, create_graph, inputs)\u001b[0m\n\u001b[0;32m    515\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m has_torch_function_unary(\u001b[38;5;28mself\u001b[39m):\n\u001b[0;32m    516\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m handle_torch_function(\n\u001b[0;32m    517\u001b[0m         Tensor\u001b[38;5;241m.\u001b[39mbackward,\n\u001b[0;32m    518\u001b[0m         (\u001b[38;5;28mself\u001b[39m,),\n\u001b[1;32m   (...)\u001b[0m\n\u001b[0;32m    523\u001b[0m         inputs\u001b[38;5;241m=\u001b[39minputs,\n\u001b[0;32m    524\u001b[0m     )\n\u001b[1;32m--> 525\u001b[0m \u001b[43mtorch\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mautograd\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mbackward\u001b[49m\u001b[43m(\u001b[49m\n\u001b[0;32m    526\u001b[0m \u001b[43m    \u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mgradient\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mretain_graph\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mcreate_graph\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43minputs\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43minputs\u001b[49m\n\u001b[0;32m    527\u001b[0m \u001b[43m\u001b[49m\u001b[43m)\u001b[49m\n",
-      "File \u001b[1;32mc:\\Users\\pc\\AppData\\Local\\Programs\\Python\\Python312\\Lib\\site-packages\\torch\\autograd\\__init__.py:267\u001b[0m, in \u001b[0;36mbackward\u001b[1;34m(tensors, grad_tensors, retain_graph, create_graph, grad_variables, inputs)\u001b[0m\n\u001b[0;32m    262\u001b[0m     retain_graph \u001b[38;5;241m=\u001b[39m create_graph\n\u001b[0;32m    264\u001b[0m \u001b[38;5;66;03m# The reason we repeat the same comment below is that\u001b[39;00m\n\u001b[0;32m    265\u001b[0m \u001b[38;5;66;03m# some Python versions print out the first line of a multi-line function\u001b[39;00m\n\u001b[0;32m    266\u001b[0m \u001b[38;5;66;03m# calls in the traceback and some print out the last line\u001b[39;00m\n\u001b[1;32m--> 267\u001b[0m \u001b[43m_engine_run_backward\u001b[49m\u001b[43m(\u001b[49m\n\u001b[0;32m    268\u001b[0m \u001b[43m    \u001b[49m\u001b[43mtensors\u001b[49m\u001b[43m,\u001b[49m\n\u001b[0;32m    269\u001b[0m \u001b[43m    \u001b[49m\u001b[43mgrad_tensors_\u001b[49m\u001b[43m,\u001b[49m\n\u001b[0;32m    270\u001b[0m \u001b[43m    \u001b[49m\u001b[43mretain_graph\u001b[49m\u001b[43m,\u001b[49m\n\u001b[0;32m    271\u001b[0m \u001b[43m    \u001b[49m\u001b[43mcreate_graph\u001b[49m\u001b[43m,\u001b[49m\n\u001b[0;32m    272\u001b[0m \u001b[43m    \u001b[49m\u001b[43minputs\u001b[49m\u001b[43m,\u001b[49m\n\u001b[0;32m    273\u001b[0m \u001b[43m    \u001b[49m\u001b[43mallow_unreachable\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;28;43;01mTrue\u001b[39;49;00m\u001b[43m,\u001b[49m\n\u001b[0;32m    274\u001b[0m \u001b[43m    \u001b[49m\u001b[43maccumulate_grad\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;28;43;01mTrue\u001b[39;49;00m\u001b[43m,\u001b[49m\n\u001b[0;32m    275\u001b[0m \u001b[43m\u001b[49m\u001b[43m)\u001b[49m\n",
-      "File \u001b[1;32mc:\\Users\\pc\\AppData\\Local\\Programs\\Python\\Python312\\Lib\\site-packages\\torch\\autograd\\graph.py:744\u001b[0m, in \u001b[0;36m_engine_run_backward\u001b[1;34m(t_outputs, *args, **kwargs)\u001b[0m\n\u001b[0;32m    742\u001b[0m     unregister_hooks \u001b[38;5;241m=\u001b[39m _register_logging_hooks_on_whole_graph(t_outputs)\n\u001b[0;32m    743\u001b[0m \u001b[38;5;28;01mtry\u001b[39;00m:\n\u001b[1;32m--> 744\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[43mVariable\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43m_execution_engine\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mrun_backward\u001b[49m\u001b[43m(\u001b[49m\u001b[43m  \u001b[49m\u001b[38;5;66;43;03m# Calls into the C++ engine to run the backward pass\u001b[39;49;00m\n\u001b[0;32m    745\u001b[0m \u001b[43m        \u001b[49m\u001b[43mt_outputs\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[43margs\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[43mkwargs\u001b[49m\n\u001b[0;32m    746\u001b[0m \u001b[43m    \u001b[49m\u001b[43m)\u001b[49m  \u001b[38;5;66;03m# Calls into the C++ engine to run the backward pass\u001b[39;00m\n\u001b[0;32m    747\u001b[0m \u001b[38;5;28;01mfinally\u001b[39;00m:\n\u001b[0;32m    748\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m attach_logging_hooks:\n",
-      "\u001b[1;31mKeyboardInterrupt\u001b[0m: "
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\pc\\AppData\\Local\\Programs\\Python\\Python312\\Lib\\site-packages\\torch\\amp\\autocast_mode.py:250: UserWarning: User provided device_type of 'cuda', but CUDA is not available. Disabling\n",
+      "  warnings.warn(\n"
      ]
     }
    ],
    "source": [
+    "from torch.cuda.amp import autocast, GradScaler\n",
+    "\n",
+    "scaler = GradScaler()\n",
     "accumulation_steps = 4\n",
+    "\n",
     "for step, batch in enumerate(train_dataloader):\n",
+    "    # Zero the gradients every 'accumulation_steps' steps\n",
     "    if step % accumulation_steps == 0:\n",
     "        optimizer.zero_grad()\n",
+    "    \n",
     "    b_input_ids, b_input_mask, b_labels = [x.to(device) for x in batch]\n",
-    "    outputs = model(b_input_ids, attention_mask=b_input_mask, labels=b_labels)\n",
-    "    loss = outputs.loss\n",
-    "    loss.backward()\n",
+    "    \n",
+    "    with autocast():  # Mixed precision training\n",
+    "        outputs = model(b_input_ids, attention_mask=b_input_mask, labels=b_labels)\n",
+    "        loss = outputs.loss / accumulation_steps  # Scale the loss\n",
+    "    \n",
+    "    scaler.scale(loss).backward()  # Scales the loss for mixed precision\n",
+    "\n",
+    "    # Update the parameters and the learning rate every 'accumulation_steps' steps\n",
     "    if (step + 1) % accumulation_steps == 0:\n",
-    "        optimizer.step()\n",
-    "        scheduler.step()\n"
+    "        scaler.step(optimizer)\n",
+    "        scaler.update()\n",
+    "        scheduler.step()\n",
+    "\n",
+    "# Ensure to call optimizer.zero_grad() for the last batch if not divisible by accumulation_steps\n",
+    "if (step + 1) % accumulation_steps != 0:\n",
+    "    scaler.step(optimizer)\n",
+    "    scaler.update()\n",
+    "    scheduler.step()\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
