--- a/Transformers.ipynb
+++ b/Transformers.ipynb
@@ -104,7 +104,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "  0%|          | 0/2673 [00:00<?, ?it/s]"
+      "  0%|          | 0/15 [00:00<?, ?it/s]"
      ]
     }
    ],
@@ -266,7 +266,69 @@
      "output_type": "stream",
      "text": [
       "Epoch 1\n",
-      "Average training loss: 0.6638797074556351\n",
+      "Average training loss: 0.6173193752765656\n",
+      "Accuracy: 0.6833333333333333\n",
+      "Classification Report:\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\Shiva\\AppData\\Local\\Programs\\Python\\Python312\\Lib\\site-packages\\sklearn\\metrics\\_classification.py:1509: UndefinedMetricWarning: Precision is ill-defined and being set to 0.0 in labels with no predicted samples. Use `zero_division` parameter to control this behavior.\n",
+      "  _warn_prf(average, modifier, f\"{metric.capitalize()} is\", len(result))\n",
+      "c:\\Users\\Shiva\\AppData\\Local\\Programs\\Python\\Python312\\Lib\\site-packages\\sklearn\\metrics\\_classification.py:1509: UndefinedMetricWarning: Precision is ill-defined and being set to 0.0 in labels with no predicted samples. Use `zero_division` parameter to control this behavior.\n",
+      "  _warn_prf(average, modifier, f\"{metric.capitalize()} is\", len(result))\n",
+      "c:\\Users\\Shiva\\AppData\\Local\\Programs\\Python\\Python312\\Lib\\site-packages\\sklearn\\metrics\\_classification.py:1509: UndefinedMetricWarning: Precision is ill-defined and being set to 0.0 in labels with no predicted samples. Use `zero_division` parameter to control this behavior.\n",
+      "  _warn_prf(average, modifier, f\"{metric.capitalize()} is\", len(result))\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "           0       0.00      0.00      0.00        19\n",
+      "           1       0.68      1.00      0.81        41\n",
+      "\n",
+      "    accuracy                           0.68        60\n",
+      "   macro avg       0.34      0.50      0.41        60\n",
+      "weighted avg       0.47      0.68      0.55        60\n",
+      "\n",
+      "Epoch 2\n",
+      "Average training loss: 0.5810937248170376\n",
+      "Accuracy: 0.6833333333333333\n",
+      "Classification Report:\n",
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "           0       0.00      0.00      0.00        19\n",
+      "           1       0.68      1.00      0.81        41\n",
+      "\n",
+      "    accuracy                           0.68        60\n",
+      "   macro avg       0.34      0.50      0.41        60\n",
+      "weighted avg       0.47      0.68      0.55        60\n",
+      "\n",
+      "Epoch 3\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\Shiva\\AppData\\Local\\Programs\\Python\\Python312\\Lib\\site-packages\\sklearn\\metrics\\_classification.py:1509: UndefinedMetricWarning: Precision is ill-defined and being set to 0.0 in labels with no predicted samples. Use `zero_division` parameter to control this behavior.\n",
+      "  _warn_prf(average, modifier, f\"{metric.capitalize()} is\", len(result))\n",
+      "c:\\Users\\Shiva\\AppData\\Local\\Programs\\Python\\Python312\\Lib\\site-packages\\sklearn\\metrics\\_classification.py:1509: UndefinedMetricWarning: Precision is ill-defined and being set to 0.0 in labels with no predicted samples. Use `zero_division` parameter to control this behavior.\n",
+      "  _warn_prf(average, modifier, f\"{metric.capitalize()} is\", len(result))\n",
+      "c:\\Users\\Shiva\\AppData\\Local\\Programs\\Python\\Python312\\Lib\\site-packages\\sklearn\\metrics\\_classification.py:1509: UndefinedMetricWarning: Precision is ill-defined and being set to 0.0 in labels with no predicted samples. Use `zero_division` parameter to control this behavior.\n",
+      "  _warn_prf(average, modifier, f\"{metric.capitalize()} is\", len(result))\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Average training loss: 0.5882698595523834\n",
       "Accuracy: 0.6833333333333333\n",
       "Classification Report:\n",
       "              precision    recall  f1-score   support\n",
@@ -291,19 +353,6 @@
       "c:\\Users\\Shiva\\AppData\\Local\\Programs\\Python\\Python312\\Lib\\site-packages\\sklearn\\metrics\\_classification.py:1509: UndefinedMetricWarning: Precision is ill-defined and being set to 0.0 in labels with no predicted samples. Use `zero_division` parameter to control this behavior.\n",
       "  _warn_prf(average, modifier, f\"{metric.capitalize()} is\", len(result))\n"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "('bert_model\\\\tokenizer_config.json',\n",
-       " 'bert_model\\\\special_tokens_map.json',\n",
-       " 'bert_model\\\\vocab.txt',\n",
-       " 'bert_model\\\\added_tokens.json')"
-      ]
-     },
-     "execution_count": 1,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -395,7 +444,7 @@
     "    print(classification_report(true_labels, preds))\n",
     "\n",
     "# Train and evaluate the model\n",
-    "for epoch in range(1):  # 1 epoch\n",
+    "for epoch in range(3): \n",
     "    print(f\"Epoch {epoch + 1}\")\n",
     "    train_model()\n",
     "    evaluate_model()\n",
