--- a/Transformers.ipynb
+++ b/Transformers.ipynb
@@ -78,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -88,8 +88,6 @@
       "Some weights of XLNetForSequenceClassification were not initialized from the model checkpoint at xlnet-base-cased and are newly initialized: ['logits_proj.bias', 'logits_proj.weight', 'sequence_summary.summary.bias', 'sequence_summary.summary.weight']\n",
       "You should probably TRAIN this model on a down-stream task to be able to use it for predictions and inference.\n",
       "c:\\Users\\Shiva\\AppData\\Local\\Programs\\Python\\Python312\\Lib\\site-packages\\transformers\\optimization.py:591: FutureWarning: This implementation of AdamW is deprecated and will be removed in a future version. Use the PyTorch implementation torch.optim.AdamW instead, or set `no_deprecation_warning=True` to disable this warning\n",
-      "  warnings.warn(\n",
-      "c:\\Users\\Shiva\\AppData\\Local\\Programs\\Python\\Python312\\Lib\\site-packages\\torch\\amp\\grad_scaler.py:131: UserWarning: torch.cuda.amp.GradScaler is enabled, but CUDA is not available.  Disabling.\n",
       "  warnings.warn(\n"
      ]
     },
@@ -97,14 +95,61 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch 1/1\n"
+      "Epoch 1/3\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "  0%|          | 0/15 [00:00<?, ?it/s]"
+      "Training: 100%|██████████| 50/50 [06:38<00:00,  7.98s/it]\n",
+      "Evaluating: 100%|██████████| 13/13 [00:33<00:00,  2.58s/it]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Train loss: 0.5806584987044334, Val loss: 0.5763889023890862, Val accuracy: 0.7\n",
+      "Epoch 2/3\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Training: 100%|██████████| 50/50 [06:43<00:00,  8.07s/it]\n",
+      "Evaluating: 100%|██████████| 13/13 [00:33<00:00,  2.61s/it]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Train loss: 0.47285640686750413, Val loss: 0.5966121027102838, Val accuracy: 0.67\n",
+      "Epoch 3/3\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Training: 100%|██████████| 50/50 [06:51<00:00,  8.23s/it]\n",
+      "Evaluating: 100%|██████████| 13/13 [00:34<00:00,  2.66s/it]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Train loss: 0.3711701175570488, Val loss: 0.4187307386444165, Val accuracy: 0.82\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n"
      ]
     }
    ],
@@ -114,14 +159,17 @@
     "from torch.utils.data import DataLoader, Dataset\n",
     "from transformers import XLNetTokenizer, XLNetForSequenceClassification, AdamW\n",
     "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.metrics import accuracy_score, classification_report\n",
     "from tqdm import tqdm\n",
-    "from torch.cuda.amp import GradScaler, autocast\n",
     "\n",
     "# Load the dataset\n",
     "df = pd.read_csv('threshold1.csv')\n",
     "\n",
     "# Preprocess the labels\n",
     "df['target'] = df['target'].apply(lambda x: 1 if x.lower() == 'genuine' else 0)\n",
+    "\n",
+    "# Use a smaller subset of the dataset for faster prototyping\n",
+    "df = df.sample(500)  # Adjust this number based on your dataset size\n",
     "\n",
     "# Split the data into train and test sets\n",
     "train_texts, test_texts, train_labels, test_labels = train_test_split(\n",
@@ -146,7 +194,6 @@
     "            text,\n",
     "            add_special_tokens=True,\n",
     "            max_length=self.max_length,\n",
-    "            return_token_type_ids=False,\n",
     "            padding='max_length',\n",
     "            truncation=True,\n",
     "            return_attention_mask=True,\n",
@@ -161,10 +208,10 @@
     "\n",
     "# Initialize the tokenizer and model\n",
     "tokenizer = XLNetTokenizer.from_pretrained('xlnet-base-cased')\n",
-    "model = XLNetForSequenceClassification.from_pretrained('xlnet-base-cased')\n",
+    "model = XLNetForSequenceClassification.from_pretrained('xlnet-base-cased', num_labels=2)\n",
     "\n",
     "# Parameters\n",
-    "BATCH_SIZE = 16  # Reduced batch size to fit within memory constraints\n",
+    "BATCH_SIZE = 8  # Reduced batch size to fit within memory constraints\n",
     "MAX_LENGTH = 128\n",
     "\n",
     "# Create the dataset objects\n",
@@ -172,45 +219,40 @@
     "test_dataset = TextDataset(test_texts, test_labels, tokenizer, MAX_LENGTH)\n",
     "\n",
     "# Create the dataloaders\n",
-    "train_dataloader = DataLoader(train_dataset, batch_size=BATCH_SIZE, shuffle=True, num_workers=4)\n",
-    "test_dataloader = DataLoader(test_dataset, batch_size=BATCH_SIZE, shuffle=False, num_workers=4)\n",
+    "train_dataloader = DataLoader(train_dataset, batch_size=BATCH_SIZE, shuffle=True)\n",
+    "test_dataloader = DataLoader(test_dataset, batch_size=BATCH_SIZE, shuffle=False)\n",
     "\n",
     "# Optimizer\n",
     "optimizer = AdamW(model.parameters(), lr=2e-5)\n",
     "\n",
-    "# Initialize the GradScaler for mixed precision training\n",
-    "scaler = GradScaler()\n",
-    "\n",
     "# Training function\n",
     "def train_epoch(model, dataloader, optimizer, device):\n",
-    "    model = model.train()\n",
+    "    model.train()\n",
     "    total_loss = 0\n",
     "\n",
-    "    for batch in tqdm(dataloader):\n",
+    "    for batch in tqdm(dataloader, desc=\"Training\"):\n",
     "        optimizer.zero_grad()\n",
     "        input_ids = batch['input_ids'].to(device)\n",
     "        attention_mask = batch['attention_mask'].to(device)\n",
     "        labels = batch['label'].to(device)\n",
     "\n",
-    "        with autocast():\n",
-    "            outputs = model(input_ids=input_ids, attention_mask=attention_mask, labels=labels)\n",
-    "            loss = outputs.loss\n",
-    "            total_loss += loss.item()\n",
+    "        outputs = model(input_ids=input_ids, attention_mask=attention_mask, labels=labels)\n",
+    "        loss = outputs.loss\n",
+    "        total_loss += loss.item()\n",
     "\n",
-    "        scaler.scale(loss).backward()\n",
-    "        scaler.step(optimizer)\n",
-    "        scaler.update()\n",
+    "        loss.backward()\n",
+    "        optimizer.step()\n",
     "\n",
     "    return total_loss / len(dataloader)\n",
     "\n",
     "# Evaluation function\n",
     "def eval_model(model, dataloader, device):\n",
-    "    model = model.eval()\n",
+    "    model.eval()\n",
     "    total_loss = 0\n",
     "    correct_predictions = 0\n",
     "\n",
     "    with torch.no_grad():\n",
-    "        for batch in dataloader:\n",
+    "        for batch in tqdm(dataloader, desc=\"Evaluating\"):\n",
     "            input_ids = batch['input_ids'].to(device)\n",
     "            attention_mask = batch['attention_mask'].to(device)\n",
     "            labels = batch['label'].to(device)\n",
@@ -223,20 +265,26 @@
     "            preds = torch.argmax(logits, dim=1)\n",
     "            correct_predictions += torch.sum(preds == labels)\n",
     "\n",
-    "    return correct_predictions.double() / len(dataloader.dataset), total_loss / len(dataloader)\n",
+    "    accuracy = correct_predictions.double() / len(dataloader.dataset)\n",
+    "    avg_loss = total_loss / len(dataloader)\n",
+    "    return accuracy, avg_loss\n",
     "\n",
     "# Train and evaluate the model\n",
     "device = torch.device('cuda') if torch.cuda.is_available() else torch.device('cpu')\n",
     "model = model.to(device)\n",
     "\n",
-    "EPOCHS = 1  # Set to 1 epoch for now\n",
+    "EPOCHS = 3  # Set to 1 epoch for now\n",
     "\n",
     "for epoch in range(EPOCHS):\n",
     "    print(f'Epoch {epoch + 1}/{EPOCHS}')\n",
     "    train_loss = train_epoch(model, train_dataloader, optimizer, device)\n",
     "    val_acc, val_loss = eval_model(model, test_dataloader, device)\n",
     "\n",
-    "    print(f'Train loss: {train_loss}, Val loss: {val_loss}, Val accuracy: {val_acc}')\n"
+    "    print(f'Train loss: {train_loss}, Val loss: {val_loss}, Val accuracy: {val_acc}')\n",
+    "\n",
+    "# # Save the model\n",
+    "# model.save_pretrained('xlnet_model')\n",
+    "# tokenizer.save_pretrained('xlnet_model')\n"
    ]
   },
   {
